# High-performance-computing-N-body-simulation

./: .gitignore  README.md  README_HPC_Project.txt  average results.docx  ~$erage results.docx  ~$ings to add to report.docx
HPC_project_GPU/: CMakeLists.txt
HPC_project_GPU/src/: README.md  n_body_gpu.cpp  n_body_gpuf.cpp
my_kokkos_project/: CMakeLists.txt  READ.me  hello.cpp  main.cpp  n_body_parallel_openmp.cpp  n_body_parallel_v3.cpp  n_body_serial.cpp
